--- a/mystyle.css
+++ b/mystyle.css
@@ -128,6 +128,7 @@ figcaption {
     .nav__links {
         text-align: center;
         margin-top: 10px;
+        width: 100%;
     }
 
     .nav__links li {
@@ -148,12 +149,12 @@ figcaption {
 
     aside {
         width: 100%;
-        padding
         padding-left: 1rem;
         margin-left: 0;
         float: none;
         box-shadow: none;
     }
+
     aside > p {
         margin: .5rem 0;
     }
@@ -184,6 +185,10 @@ figcaption {
 
     header {
         padding: 15px 5%;
+    }
+
+    .nav__links {
+        text-align: center;
     }
 
     .nav__links li {
