--- a/mystyle.css
+++ b/mystyle.css
@@ -123,6 +123,7 @@ figcaption {
     header {
         flex-wrap: wrap;
         padding: 10px 5%;
+        justify-content: center; /* Center the items in the header */
     }
 
     .nav__links {
@@ -185,6 +186,7 @@ figcaption {
 
     header {
         padding: 15px 5%;
+        justify-content: center; /* Center the items in the header */
     }
 
     .nav__links {
@@ -199,3 +201,4 @@ figcaption {
         width: 50%;
     }
 }
+
